# myworld

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  install.sh  pyproject.toml  uninstall.sh
.claude/: AIOS_HARNESS.md  settings.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docker.yml  publish.yml  tests.yml
.omc/: prd.json
apps/aios-design/: colors_and_type.css
apps/akashic-ui/: galaxy.html  index.html  vercel.json
apps/control/: aios-control-data.js  aios-control-snapshot.json  app.js  chat.html  chat.js  goal_bar.js  index.html  live.js  styles.css
apps/serving/: index.html  neural-map.html
apps/showcase/: index.html
deploy/: helpers_catalog.json  model_tiers.json
deploy/akashic-worker/: test_fixes.mjs  wrangler.json
deploy/lakebase/: README.md  validate_schema.py
docs/: AGENT_BEHAVIOR_STUDY.md  AGENT_LOOP_ARCHITECTURE.md  AGENT_WORKLOG.md  AIOS_ABSORPTION_BACKLOG.md  AIOS_ACTION_POLICY.md  AIOS_ADDRESS_SPACE.md  AIOS_AGENTS_REGISTRY.md  AIOS_AGENT_ENGINEERING_STUDY.md  AIOS_AGENT_INDUCED_H1_RESULTS.md  AIOS_AGENT_INTERFACE.md  AIOS_AGENT_LEDGER.md  AIOS_AGENT_PROTOCOL.md  AIOS_AGENT_SELF_LOOP.md  AIOS_AKASHIC_DISTRIBUTED_DESIGN.md  AIOS_BASE_ARCHITECTURE_AUDIT.md  AIOS_BEHAVIOR_SCORING_ANALYSIS.md  AIOS_BRAND.md  AIOS_BUILD_METHOD.md  AIOS_CANONICAL_SHAPE.md  AIOS_CHAT.md  AIOS_CITIZENSHIP.md  AIOS_CLAUDE_SELF_OBSERVATION_LOG.md  AIOS_CLOSE_CONDITION.md  AIOS_CODEX_CLI_ABSORPTION.md  AIOS_COEVOLUTION.md  AIOS_COMMS_ARCHITECTURE.md  AIOS_CONTRACT_EXECUTION_ORDER.md  AIOS_CONTRACT_OBJECT_V0.md  AIOS_CONTRACT_RECONCILIATION.md  AIOS_CONTROL_APP.md  AIOS_DACON_236694.md  AIOS_DATA_LIFECYCLE.md  AIOS_DEADLINE_COPILOT.md  AIOS_DEFINITION.md  AIOS_DEPLOY_MANIFEST.md  AIOS_DESIGN_REVALIDATION_2026_07.md  AIOS_DNA.md  AIOS_ECOSYSTEM_ABSORPTION_ROADMAP.md  AIOS_ECOSYSTEM_BLUEPRINT.md  AIOS_EXTERNAL_HEAD_DISSECTION.md  (+69 more)
docs/_history/: README.md
docs/agents/: CAPABILITYOS_AGENT.md  CODEX_UI_AGENT.md  GENESIS_AGENT.md  HIVEMIND_AGENT.md  MEMORYOS_AGENT.md
docs/contracts/: ASC-0001-memoryos-hivemind-loop.md  ASC-0002-capabilityos-executable-surface.md  ASC-0003-dispatch-packet-enrichment.md  ASC-0004-dispatch-watcher-and-state-machine.md  ASC-0005-hive-capability-bridge.md  ASC-0008-workspace-doc-ingest-memoryos.md  ASC-0009-capability-observation-feedback.md  ASC-0010-hive-semantic-quality-gate.md  ASC-0011-control-plane-loop-policy.md  ASC-0012-child-repo-durability-closeout.md  ASC-0017-control-plane-monitor-sidecar.md  ASC-0018-loop-policy-source-hygiene.md  ASC-0023-hive-source-read-registry.md  ASC-0029-persistent-control-loop.md  ASC-0032-uri-repo-isolation-setup.md  ASC-0034-governance-action-policy-engine.md  ASC-0036-cross-repo-semantic-alignment.md  ASC-0037-child-watcher-locale-aware-fallback.md  ASC-0038-self-resonant-repo-loop.md  ASC-0041-web-evidence-memory-review.md  ASC-0044-desktop-control-application.md  ASC-0045-hive-handoff-compat-import.md  ASC-0046-goal-evolution-concrete-hive-todo.md  ASC-0047-hive-evaluate-subagents-review.md  ASC-0048-goal-evolution-semantic-verifier-refinement.md  ASC-0049-hive-semantic-verifier-review.md  ASC-0050-aios-primitive-surface.md  ASC-0051-aios-coevolution-heartbeat.md  ASC-0052-aios-native-runtime-entrypoint.md  ASC-0055-absorb-ollama-qwen25-7b.md  ASC-0056-memoryos-draft-pipeline-closure.md  ASC-0057-pulse-heartbeat-persistence.md  ASC-0058-goal-inbox-processor.md  ASC-0059-watcher-race-resolution.md  ASC-0060-action-policy-scope-aware.md  ASC-0061-dispatch-escalate-recovery.md  ASC-0062-peer-share-privacy-projection.md  ASC-0063-uri-content-relevance-filter.md  ASC-0064-live-dashboard-websocket.md  ASC-0065-genesisos-bootstrap.md  (+171 more)
docs/deploy/: PRODUCTION_HOSTING_RUNBOOK.md
docs/design/: AIOS_CONTROL_CENTER_REFERENCE_BOARD.md  AIOS_PROVIDER_WEB_REFERENCES.md
docs/discoveries/: 2026-05-11-jaewon-search.md  2026-05-12-claude-cli-primitives-reverse-engineering.md  (+30 more)
scripts/: aios_action_policy.py  aios_adapters.py  aios_address.py  aios_agent_behavior.py  aios_agent_demo.py  aios_agent_invoke.py  aios_agent_registry.py  aios_agent_system.py  aios_akashic.py  aios_ambient.py  aios_ask.py  aios_authority.py  aios_boundary_classifier.py  aios_boundary_probe.py  aios_capability_base.py  aios_capability_dispatch.py  aios_capability_feedback.py  aios_capability_mcp.py  aios_capability_observation_memory_review.py  aios_capability_scanner.py  aios_capabilityos_bridge.py  aios_capture_args.py  aios_ceiling.py  aios_channel.py  aios_chat.py  aios_chat_router.py  aios_checkpoint.py  aios_child_watcher.sh  aios_cli_style.py  aios_close_condition.py  aios_closure_gate.py  aios_cls_gate.py  aios_cls_train.py  aios_command_api.py  aios_commit_guard.py  aios_completion.py  aios_consistency_edges.py  aios_contract_autodraft.py  aios_contract_object.py  aios_contract_reconcile.py  (+180 more)
tests/: conftest.py  test_aios_accepted_memory_surfaces.py  test_aios_action_policy.py  test_aios_adapters.py  test_aios_address.py  test_aios_agent_behavior.py  test_aios_agent_interface_spec.py  test_aios_agent_invoke.py  test_aios_agent_registry.py  test_aios_agent_system_privacy.py  test_aios_akashic.py  test_aios_ambient.py  test_aios_ask.py  test_aios_authority.py  test_aios_boundary_classifier.py  test_aios_boundary_probe.py  test_aios_capability_dispatch.py  test_aios_capability_mcp.py  test_aios_capability_observation_memory_review.py  test_aios_capture_args.py  test_aios_channel.py  test_aios_chat.py  test_aios_chat_router.py  test_aios_child_watcher.py  test_aios_close_condition.py  test_aios_closure_gate.py  test_aios_cls_gate.py  test_aios_cls_train.py  test_aios_coevolution.py  test_aios_command_api.py  test_aios_commit_guard.py  test_aios_consistency_edges.py  test_aios_contract_autodraft.py  test_aios_contract_autodraft_history.py  test_aios_contract_object.py  test_aios_contract_reconcile.py  test_aios_contract_runner.py  test_aios_contract_to_memory.py  test_aios_control_snapshot.py  test_aios_convergence_audit.py  (+131 more)
(+309 files in other folders)
