[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-os"
version = "0.1.0"
description = "AIOS — personal AI Operating System: local-first agent head coordinating provider CLIs, local LLMs, memory, and capabilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jaewon Choi", email = "cjw070690@gmail.com"}]
license = { text = "MIT" }
keywords = ["ai", "agent", "llm", "local-first", "personal-ai", "aios", "autonomous-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/cjw0076/myworld"
Repository = "https://github.com/cjw0076/myworld"
"Bug Tracker" = "https://github.com/cjw0076/myworld/issues"
Documentation = "https://github.com/cjw0076/myworld/blob/main/README.md"

# No required PyPI deps — AIOS uses stdlib + optional providers.
# Install extras below for the provider you want.
dependencies = []

[project.optional-dependencies]
gemini  = ["google-generativeai"]
ollama  = []          # Ollama is a local binary — install via aios setup apply

[project.scripts]
aios = "aios_launcher:main"

[tool.setuptools]
# aios_launcher lives in scripts/ — expose it as a top-level module for the
# entry_point. Editable install (-e) keeps the launcher at its original path
# so launcher_relative_root() resolves to the correct myworld/ root.
package-dir = {"" = "scripts"}
py-modules  = ["aios_launcher"]
